--- a/omnicell/configs/tasks/satija/raw/satija_across_genes.yaml
+++ b/omnicell/configs/tasks/satija/raw/satija_across_genes.yaml
@@ -1,21 +1,21 @@
-name: kang_ho_CD4T
+name: satija_across_genes
+
 data: 
-  path: /orcd/archive/abugoot/001/Projects/opitcho/sandbox/omnicell/kang.h5ad
-  cell_key: cell_type
-  pert_key: condition_key
+  path: /orcd/archive/abugoot/001/Projects/dlesman/datasets/Seurat_IFNB.h5ad
   apply_norm: True
   apply_log1p: True
-  control: control
+  cell_key: cell_type
+  gene_var_key: gene
+  pert_key: gene
+  control: NT
 
 datasplit:
-  #test_size: 1000
-  #control_size: 1000
   training:
     #Random folds need to be implemented
     #TODO: More complex splits
 
     #Annoying part is if we have random splits how will we define the tasks? -
-    holdout_cells: [CD4T]
+    holdout_perts: [IFNAR2, TYK2, STAT2, IFNAR1]
 
   evals:
 
@@ -24,9 +24,14 @@ datasplit:
     #Targets on which we evaluate when we do the holdout, can be ALL
     #If these are also heldout then we are evaluating on unseen cell + unseen pert
     #Set the combinations to evaluate on, we can implement more complex commands later on
-    evaluation_targets: [[CD4T, perturbed]]
+    evaluation_targets: [[A549, IFNAR2], [A549, TYK2], [A549, STAT2], [A549, IFNAR1]]
 
 
+  #holdout_cells: [xxx]
+  
+  #test_size: 0.2
+  #Something like this later on, i.e. stratification
+  #groupby: ['species', 'condition']
 
     
 dataloader:
