--- a/omnicell/configs/tasks/satija/raw/satija_across_genes.yaml
+++ b/omnicell/configs/tasks/satija/raw/satija_across_genes.yaml
@@ -4,6 +4,7 @@ data:
   path: /orcd/archive/abugoot/001/Projects/dlesman/datasets/Seurat_IFNB.h5ad
   apply_norm: True
   apply_log1p: True
+  var_names_key: gene
   cell_key: cell_type
   gene_var_key: gene
   pert_key: gene
