--- a/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml
+++ b/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml
@@ -3,8 +3,7 @@ cell_embeddings: []
 cell_key: cell_type
 control: non-targeting
 count_normalized: false
-description: Essential genes across cells dataset with basic out-of-distribution setup,
-  no normalization applied
+description: Essential genes 
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw/essential_gene_knockouts_raw.h5ad
