--- a/configs/catalogue/essential_gene_knockouts_raw.yaml
+++ b/configs/catalogue/essential_gene_knockouts_raw.yaml
@@ -5,11 +5,7 @@ control: non-targeting
 count_normalized: false
 description: Essential genes
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw
-gene_embeddings:
-- MMedllama-3-8B
-- llamaPMC-7B
-- bioBERT
-- llamaPMC-13B
+gene_embeddings: []
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw/essential_gene_knockouts_raw.h5ad
 pert_embeddings:
