--- a/configs/catalogue/essential_gene_knockouts_raw.yaml
+++ b/configs/catalogue/essential_gene_knockouts_raw.yaml
@@ -5,12 +5,19 @@ control: non-targeting
 count_normalized: false
 description: Essential genes
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw
-gene_embeddings: []
+gene_embeddings:
+- bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
+- llamaPMC-13B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw/essential_gene_knockouts_raw.h5ad
 pert_embeddings:
 - UCE_ESM2_Mean_Imputed
 - BioBERT
+- bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
 pert_key: gene
-precomputed_DEGs: true 
+precomputed_DEGs: true
 var_names_key: null
