--- a/configs/catalogue/essential_gene_knockouts_raw.yaml
+++ b/configs/catalogue/essential_gene_knockouts_raw.yaml
@@ -13,11 +13,10 @@ gene_embeddings:
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/essential_gene_knockouts_raw/essential_gene_knockouts_raw.h5ad
 pert_embeddings:
-- UCE_ESM2_Mean_Imputed
-- BioBERT
 - bioBERT
 - MMedllama-3-8B
 - llamaPMC-7B
+- llamaPMC-13B
 pert_key: gene
 precomputed_DEGs: true
 var_names_key: null
