--- a/configs/catalogue/FrangiehIzar2021_RNA.yaml
+++ b/configs/catalogue/FrangiehIzar2021_RNA.yaml
@@ -1,7 +1,7 @@
 HVG: false
 cell_embeddings: []
 cell_key: celltype
-control: non-targeting
+control: control
 count_normalized: false
 description: Downloaded from scPerturb website
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/FrangiehIzar2021/RNA
