--- a/configs/catalogue/PapalexiSatija2021_eccite_arrayed_protein.yaml
+++ b/configs/catalogue/PapalexiSatija2021_eccite_arrayed_protein.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/PapalexiSatija2021/arrayed_protei
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: protein
