Template jobs for across cells

--- a/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_hepg2/eval_config.yaml
+++ b/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_hepg2/eval_config.yaml
@@ -1,43 +1,43 @@
 dataset: essential_gene_knockouts_raw
 evaluation_targets:
 - - hepg2
-  - SRP68
+  - RPL30
 - - hepg2
-  - RPS2
+  - PSMD6
 - - hepg2
-  - GTF2A1
+  - EIF2S3
 - - hepg2
-  - RPS8
+  - MCM6
 - - hepg2
-  - RPL7
+  - CD3EAP
 - - hepg2
-  - SNRPC
+  - SRP54
 - - hepg2
-  - POLR2H
+  - CENPJ
 - - hepg2
-  - RPL4
+  - PSMC5
 - - hepg2
-  - HSPA9
+  - NOP14
 - - hepg2
-  - INTS8
+  - SART3
 - - hepg2
-  - EIF3B
+  - EIF2B2
 - - hepg2
-  - EIF2B5
+  - RPS18
 - - hepg2
-  - RPS7
+  - NUP107
 - - hepg2
-  - NLE1
-- - hepg2
-  - SNRNP200
-- - hepg2
-  - UTP15
-- - hepg2
-  - PSMA4
-- - hepg2
-  - RPL38
-- - hepg2
-  - RPL34
+  - RPL9
 - - hepg2
   - RPL13
+- - hepg2
+  - DDX41
+- - hepg2
+  - EIF3A
+- - hepg2
+  - AARS
+- - hepg2
+  - MRPL35
+- - hepg2
+  - ZC3H13
 name: rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1-eval_hepg2
