--- a/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_hepg2/eval_config.yaml
+++ b/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_hepg2/eval_config.yaml
@@ -1,43 +1,43 @@
 dataset: essential_gene_knockouts_raw
 evaluation_targets:
 - - hepg2
-  - RPL30
+  - DCUN1D5
 - - hepg2
-  - PSMD6
+  - EIF3B
 - - hepg2
-  - EIF2S3
+  - CPSF3
 - - hepg2
-  - MCM6
+  - RPS6
 - - hepg2
-  - CD3EAP
+  - RPS27A
 - - hepg2
-  - SRP54
+  - CNOT1
 - - hepg2
-  - CENPJ
+  - NMD3
 - - hepg2
-  - PSMC5
-- - hepg2
-  - NOP14
-- - hepg2
-  - SART3
-- - hepg2
-  - EIF2B2
-- - hepg2
-  - RPS18
-- - hepg2
-  - NUP107
+  - INTS5
 - - hepg2
   - RPL9
 - - hepg2
-  - RPL13
+  - RPA2
 - - hepg2
-  - DDX41
+  - INTS8
 - - hepg2
-  - EIF3A
+  - MED22
 - - hepg2
-  - AARS
+  - INTS2
 - - hepg2
-  - MRPL35
+  - RPL8
 - - hepg2
-  - ZC3H13
+  - GNL3
+- - hepg2
+  - RPL10
+- - hepg2
+  - MED7
+- - hepg2
+  - RPL7L1
+- - hepg2
+  - TPT1
+- - hepg2
+  - SNRPD3
 name: rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1-eval_hepg2
