--- a/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_jurkat/eval_config.yaml
+++ b/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1/split_jurkat/eval_config.yaml
@@ -1,43 +1,43 @@
 dataset: essential_gene_knockouts_raw
 evaluation_targets:
 - - jurkat
-  - MTBP
+  - EXOSC8
 - - jurkat
-  - XRN1
+  - RPL37A
 - - jurkat
-  - SRRT
+  - MCM6
 - - jurkat
-  - MTOR
+  - NELFB
 - - jurkat
-  - METTL3
+  - MED8
 - - jurkat
-  - RPL26
+  - NELFA
 - - jurkat
-  - RPS3A
-- - jurkat
-  - SMN2
-- - jurkat
-  - MED11
+  - CTDP1
 - - jurkat
   - CCNH
 - - jurkat
-  - EXOSC2
+  - TRMT112
 - - jurkat
-  - TIMM23B
+  - MARS
 - - jurkat
-  - FAU
+  - HARS
+- - jurkat
+  - XRN1
+- - jurkat
+  - MAX
+- - jurkat
+  - DDX10
+- - jurkat
+  - MEIS3
+- - jurkat
+  - NCBP2
+- - jurkat
+  - DBR1
+- - jurkat
+  - RPS13
 - - jurkat
   - EIF2B1
 - - jurkat
-  - BTF3
-- - jurkat
-  - GPS1
-- - jurkat
-  - INTS14
-- - jurkat
-  - MED6
-- - jurkat
-  - FUNDC2
-- - jurkat
-  - CPSF1
+  - PCBP1
 name: rs_accC_hepg2_jurkat_ood_ss:ns_20_2_most_pert_0.1-eval_jurkat
