--- a/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_jurkat_hepg2_k562_rpe1_ood_ss:ns_20_4_most_pert_0.1/split_jurkat/eval_config.yaml
+++ b/configs/splits/essential_gene_knockouts_raw/random_splits/rs_accC_jurkat_hepg2_k562_rpe1_ood_ss:ns_20_4_most_pert_0.1/split_jurkat/eval_config.yaml
@@ -1,43 +1,43 @@
 dataset: essential_gene_knockouts_raw
 evaluation_targets:
 - - jurkat
-  - YARS
-- - jurkat
-  - TAF12
-- - jurkat
-  - PPP1R37
-- - jurkat
-  - RPS15A
-- - jurkat
-  - TFAM
-- - jurkat
-  - NOL8
-- - jurkat
-  - INTS14
-- - jurkat
-  - DDX47
-- - jurkat
-  - SEH1L
-- - jurkat
-  - MED20
-- - jurkat
   - WTAP
 - - jurkat
-  - NACA
+  - VARS
 - - jurkat
-  - GNL3
+  - DDX10
 - - jurkat
-  - RPSA
+  - RPAP3
 - - jurkat
-  - MED4
+  - ZNF236
 - - jurkat
-  - NOM1
+  - RPL10A
 - - jurkat
-  - DDX6
+  - MED27
+- - jurkat
+  - GTF2F2
+- - jurkat
+  - DDX52
+- - jurkat
+  - MLLT6
+- - jurkat
+  - FUNDC2
+- - jurkat
+  - EXOSC7
+- - jurkat
+  - DDX55
 - - jurkat
   - SYMPK
 - - jurkat
-  - TSR2
+  - CTDP1
 - - jurkat
-  - GEMIN5
+  - UHRF1
+- - jurkat
+  - TAF7
+- - jurkat
+  - MED14
+- - jurkat
+  - EXOSC4
+- - jurkat
+  - SEH1L
 name: rs_accC_jurkat_hepg2_k562_rpe1_ood_ss:ns_20_4_most_pert_0.1-eval_jurkat
